[gd_scene load_steps=3 format=3 uid="uid://bvbrgdq1ak610"]

[ext_resource type="Script" uid="uid://8wjkdi2ucrbm" path="res://Scripts/Ui/Parts/CustomButton.gd" id="1_16ugl"]
[ext_resource type="PackedScene" uid="uid://dccq7kb6xglsm" path="res://Scenes/UI/CustomParts/CustomPanel.tscn" id="1_86f1q"]

[node name="CustomButton" type="Control"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_16ugl")

[node name="CustomPanel" parent="." instance=ExtResource("1_86f1q")]
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="TextureButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="TextureButton" to="." method="on_pressed"]
